# Parameterization

SimpleParam/Param/: CMakeLists.txt
SimpleParam/Param/lib/: demo_shared.lib  linalg.lib  util_md.lib  util_mdd.lib
SimpleParam/Param/lib/Debug/: common.idb  common.lib  graphite.idb  graphite.lib  meshmodel.idb  numerical.idb  numerical.lib  opengl.idb  opengl.lib  param.idb  ui.idb  ui.lib
SimpleParam/Param/lib/Release/: common.idb  common.lib  graphite.idb  graphite.lib  meshmodel.idb  meshmodel.lib  numerical.idb  numerical.lib  opengl.idb  opengl.lib  param.idb  param.lib  ui.idb  ui.lib
SimpleParam/Param/src/Common/: BasicDataType.h  CMakeLists.txt  HSVColor.cpp  HSVColor.h  Macro.h  Matrix.cpp  Utility.cpp  Utility.h  matrix.h  stopwatch.cpp
SimpleParam/Param/src/Graphite/: CMakeLists.txt
SimpleParam/Param/src/MainWindow/: CMakeLists.txt  CroosParameter.cpp  CrossParamControl.cpp  CrossParamControl.h  CrossParameter.h  MainWindow.cpp  MainWindow.h  QGLViewer.cpp  QGLViewer.h  RightPanel.cpp  RightPanel.h  main.cpp
SimpleParam/Param/src/ModelMesh/: BasicElement.h  CMakeLists.txt  MeshModel.cpp  MeshModel.h  MeshModelAdvancedOp.cpp  MeshModelAdvancedOp.h  MeshModelAuxData.h  MeshModelBasicOp.cpp  MeshModelBasicOp.h  MeshModelIO.cpp  MeshModelIO.h  MeshModelKernel.cpp  MeshModelKernel.h  MeshModelRender.cpp  MeshModelRender.h
SimpleParam/Param/src/Numerical/: CMakeLists.txt  MatrixConverter.cpp  MatrixConverter.h  MeshSparseMatrix.cpp  MeshSparseMatrix.h  Rotation.h  linear_solver.cpp  linear_solver.h  non_linear_solver.cpp  non_linear_solver.h  solver.h
SimpleParam/Param/src/OpenGL/: CMakeLists.txt  GLContext.h  GLElement.cpp  GLElement.h
SimpleParam/Param/src/Param/: Barycentric.cc  Barycentric.h  CMakeLists.txt  (+43 more)
(+105 files in other folders)
